deployed on azure
Deployment successful, everything works. I still need to update the content and work on a few mobile bugs

--- a/MyWebsiteMarch2025/wwwroot/index.html
+++ b/MyWebsiteMarch2025/wwwroot/index.html
@@ -19,5 +19,5 @@
 
 
 
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-RTIIKDEM.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-55S2P3GT.js" type="module"></script></body>
 </html>
