improved sandwitch menu
now menu looks better and is functional

--- a/MyWebsiteMarch2025/wwwroot/index.html
+++ b/MyWebsiteMarch2025/wwwroot/index.html
@@ -31,5 +31,5 @@
 
 
 
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-7DOAGM4B.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-MFCDJCEW.js" type="module"></script></body>
 </html>
