--- a/MyWebsiteMarch2025/wwwroot/index.html
+++ b/MyWebsiteMarch2025/wwwroot/index.html
@@ -31,5 +31,5 @@
 
 
 
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-KN2A62DX.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-W6L5H2WB.js" type="module"></script></body>
 </html>
