--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,24 @@
   <title>Arin Leviti</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- SEO meta tags -->
+  <meta name="description" content="Portfolio of Arin Leviti – web developer and tech enthusiast.">
+  <meta name="keywords" content="Arin Leviti, portfolio, web developer, Angular, frontend, React">
+  <meta name="robots" content="index, follow">
+  <!-- Open Graph / Social sharing (WhatsApp, Facebook) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Arin Leviti">
+  <meta property="og:description" content="Portfolio of Arin Leviti – web developer and tech enthusiast.">
+  <meta property="og:image" content="https://res.cloudinary.com/dvr9t29vj/image/upload/v1756374833/arinWHatsapp_etx4tf.png">
+  <meta property="og:url" content="https://arinleviti.site">
+
+  <!-- Twitter cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Arin Leviti">
+  <meta name="twitter:description" content="Portfolio of Arin Leviti – web developer and tech enthusiast.">
+  <meta name="twitter:image" content="https://res.cloudinary.com/dvr9t29vj/image/upload/v1756374833/arinWHatsapp_etx4tf.png">
+  <meta name="twitter:url" content="https://arinleviti.site">
+  
   <link rel="icon" type="image/x-icon" href="/iconResized.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
