content is served slowly from netlify
trying to see if build was the culprit

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Portfolio of Arin Leviti – web developer and tech enthusiast.">
   <meta name="keywords" content="Arin Leviti, portfolio, web developer, Angular, frontend, React">
   <meta name="robots" content="index, follow">
-  <!-- Open Graph / Social sharing (WhatsApp, Facebook) -->
+  <!-- Open Graph / Social sharing (WhatsApp, Facebook, ciao) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Arin Leviti">
   <meta property="og:description" content="Portfolio of Arin Leviti – web developer and tech enthusiast.">
